--- a/react-frontend/public/index.html
+++ b/react-frontend/public/index.html
@@ -39,6 +39,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;600&display=swap"
       rel="stylesheet"
     />
