--- a/react-frontend/public/index.html
+++ b/react-frontend/public/index.html
@@ -46,7 +46,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>OdinBook</title>
     <script
       src="https://kit.fontawesome.com/a6712f79fb.js"
       crossorigin="anonymous"
